--- a/ZeOntologyNewsExtractorUserRunner/app/views/home/index.html.erb
+++ b/ZeOntologyNewsExtractorUserRunner/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
 <h1>Bienvenue sur Ze Ontology News Extractor User Runner!</h1>
 
-<%= link_to "Configurer mon flux", config_path %>
+<%= link_to "Configurer mon flux", config_index_path %>
+<%= link_to "Lister les possibilitées", items_path %>
+
