add rss writting for validation of annotation chain tools

--- a/ZeOntologyNewsExtractorUserRunner/app/views/home/index.html.erb
+++ b/ZeOntologyNewsExtractorUserRunner/app/views/home/index.html.erb
@@ -2,4 +2,5 @@
 
 <%= link_to "Configurer mon flux", config_index_path %>
 <%= link_to "Lister les possibilitées", items_path %>
+<%= link_to "Le flux rss de base", rssfeed_index_path %>
 
