--- a/ZeOntologyNewsExtractorUserRunner/app/views/config/index.html.erb
+++ b/ZeOntologyNewsExtractorUserRunner/app/views/config/index.html.erb
@@ -4,8 +4,12 @@
 
 <h2>Choix de votre domaine géographique</h2>
 
-<input id="geo" name="geo" type="text" />
-
+<input id="geo" name="geo" type="text" list="valueList"/>
+		  <datalist id="valueList"  >
+			<% @allGeo.each do |word| %>
+				<option value="<%= word['value'] %>" label="<%= get4StoreNameElem(word['value']) %>" />
+			<% end %>
+		  </datalist>
 
 <%= submit_tag("→") %>
 
