--- a/ZeOntologyNewsExtractorUserRunner/app/views/layouts/rssfeed.html.erb
+++ b/ZeOntologyNewsExtractorUserRunner/app/views/layouts/rssfeed.html.erb
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ZeOntologyNewsExtractorUserRunner</title>
+  <title>ZeOntologyNewsExtractorUserRunner - Config</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+  <%= auto_discovery_link_tag(:rss,:old => @filter) %>
+
 </head>
 <body>
-	
 <%= yield %>
 
 </body>
