improve ZONEUR screen for tomorrow presentation

--- a/ZeOntologyNewsExtractorUserRunner/app/views/home/index.html.erb
+++ b/ZeOntologyNewsExtractorUserRunner/app/views/home/index.html.erb
@@ -1,6 +1,9 @@
 <h1>Bienvenue sur Ze Ontology News Extractor User Runner!</h1>
-
-<%= link_to "Configurer mon flux", config_index_path %>
-<%= link_to "Lister les possibilitées", items_path %>
+<ul>
+	<li>
+<%= link_to "Lister les critères disponibles", items_path %>
+</li>
+<li>
 <%= link_to "Le flux rss de base", rssfeed_index_path %>
-
+</li>
+</ul>
