now we can say how many news we have in our database :p

--- a/ZeOntologyNewsExtractorUserRunner/app/views/home/index.html.erb
+++ b/ZeOntologyNewsExtractorUserRunner/app/views/home/index.html.erb
@@ -7,3 +7,7 @@
 <%= link_to "Le flux rss de base", rssfeed_index_path %>
 </li>
 </ul>
+
+
+<br/><br/><br/><br/>
+Nous avons actuellement <b><%= @size%></b> news dans la base
