new organisation of the ZONEUR using bootstrap

--- a/ZeOntologyNewsExtractorUserRunner/app/views/home/index.html.erb
+++ b/ZeOntologyNewsExtractorUserRunner/app/views/home/index.html.erb
@@ -1,13 +1,2 @@
-<h1>Bienvenue sur Ze Ontology News Extractor User Runner!</h1>
-<ul>
-	<li>
-<%= link_to "Lister les critères disponibles", items_path %>
-</li>
-<li>
-<%= link_to "Le flux rss de base", rssfeed_index_path %>
-</li>
-</ul>
-
-
-<br/><br/><br/><br/>
-Nous avons actuellement <b><%= @size%></b> news dans la base
+<h1>Home#index</h1>
+<p>Find me in app/views/home/index.html.erb</p>
