--- a/ZeOntologyNewsExtractorUserRunner/app/assets/stylesheets/rssfeed.css.scss
+++ b/ZeOntologyNewsExtractorUserRunner/app/assets/stylesheets/rssfeed.css.scss
@@ -1,3 +1,8 @@
-// Place all the styles related to the rssfeed controller here.
+// Place all the styles related to the rssFeed controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.multi-column {
+-moz-column-count: 3;
+-webkit-column-count: 3;
+column-count: 3;
+}
