--- a/ZeOntologyNewsExtractorUserRunner/app/views/layouts/application.html.erb
+++ b/ZeOntologyNewsExtractorUserRunner/app/views/layouts/application.html.erb
@@ -3,11 +3,41 @@
 <head>
   <title>ZeOntologyNewsExtractorUserRunner</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
+  <%= javascript_include_tag("/bootstrap/js/bootstrap.min.js")%>
+  <%= stylesheet_link_tag("/bootstrap/css/bootstrap.min.css") %>
+  <%= stylesheet_link_tag("/bootstrap/css/bootstrap-responsive.css") %>
+  <%= stylesheet_link_tag("/bootstrap/css/zone-wp.css") %>
+  <%= stylesheet_link_tag("/bootstrap/css/cerulean.css") %>
 </head>
 <body>
-	
+
+
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="/">Zone - DEMO</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="/">Home</a></li>
+              <li><a href="http://www.zone-project.org">WebSite</a></li>
+              <li><a href="http://www.zone-project.org/?page_id=13">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="container">
 <%= yield %>
+</div>
 
 </body>
 </html>
