--- a/ZeOntologyNewsExtractorUserRunner/app/views/rssfeed/index.html.erb
+++ b/ZeOntologyNewsExtractorUserRunner/app/views/rssfeed/index.html.erb
@@ -10,6 +10,11 @@
 <% end %>
 
 
+
+
+
+
+
 <%= javascript_tag do %>
   $("#load-more2").bind("ajax:complete", function(et, e){
    $("#load-more2").html(e.responseText); // insert content
@@ -27,7 +32,7 @@
       next if (element[1].select { |f| f[0] == "http://purl.org/rss/1.0/description"})[0] == nil%>
     
 <div class="well">
-            <a href= "<%= element[0] %>">
+            <a href= "%= element[0] %>">
                 <%= ((element[1].select { |f| f[0] == "http://purl.org/rss/1.0/title"})[0])[1]%>
             </a>
             <%= ((element[1].select { |f| f[0] == "http://purl.org/rss/1.0/pubDate"})[0])[1]%>
@@ -44,10 +49,10 @@
             
             
             
-            <div class="accordion" id="accordion<%= elementId+=1 %>">
+            <div class="accordion" id="accordion<%= elementId+=1 %>" style="margin-bottom: 0px;">
                 <div class="accordion-group">
                     <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion<%= elementId%>" href="#collapse<%= elementId%>">
+                        <a class="accordion-toggle btn btn-mini" data-toggle="collapse" data-parent="#accordion<%= elementId%>" href="#collapse<%= elementId%>">
                         Voir les annotations
                         </a>
                     </div>
@@ -62,7 +67,7 @@
                                     
                                     <% if item[0].starts_with? 'http://www.zone-project.org/plugins/ExtractArticlesContent#result'%>
                                         <%= item[1][0..400] %>
-                                        <a href= "<%= element[0] %>">
+                                        <a href= "%= element[0] %>">
                                             (...)
                                         </a>
                                     <% elsif (item[1].starts_with? 'http://rdf.insee') || (item[1].starts_with? 'http://www.dbpedia') %>
@@ -86,7 +91,6 @@
                     </div>
                 </div>
             </div>
-
     </div>
 
     <% end %>
