--- a/ZeOntologyNewsExtractorUserRunner/app/views/rssfeed/index.html.erb
+++ b/ZeOntologyNewsExtractorUserRunner/app/views/rssfeed/index.html.erb
@@ -37,6 +37,17 @@
       next if (element[1].select { |f| f[0] == "http://purl.org/rss/1.0/description"})[0] == nil%>
     
 <div class="well">
+    <div class="row-fluid">
+        <% if ((element[1].select { |f| f[0] == "http://purl.org/rss/1.0/image"})[0]) != nil
+            image=((element[1].select { |f| f[0] == 'http://purl.org/rss/1.0/image'})[0])[1].html_safe  end %>
+        <% if image != nil %>
+            <div class="span3">
+                <img src="<%= image%>" class="img-polaroid">
+            </div>
+            <div class="span9">
+        <%else%>
+            <div class="span12">
+        <%end%>
             <a href= "<%= element[0] %>">
                 <%= ((element[1].select { |f| f[0] == "http://purl.org/rss/1.0/title"})[0])[1]%>
             </a>
@@ -51,8 +62,9 @@
             
             <%= if ((element[1].select { |f| f[0] == "http://purl.org/rss/1.0/description"})[0])[1] != nil
                 ((element[1].select { |f| f[0] == "http://purl.org/rss/1.0/description"})[0])[1].html_safe  end %>
-            
-            
+
+        </div>
+    </div>
             
             
             <div class="accordion" id="accordion<%= elementId+=1 %>" style="margin-bottom: 0px;">
