--- a/ZeOntologyNewsExtractorUserRunner/app/views/layouts/application.html.erb
+++ b/ZeOntologyNewsExtractorUserRunner/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= include_gon %>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag params[:controller] %>
   <%= csrf_meta_tags %>
   <%= javascript_include_tag("/bootstrap/js/bootstrap.min.js")%>
   <%= stylesheet_link_tag("/bootstrap/css/bootstrap.min.css") %>
