[#41514613] add source list to menu

--- a/ZeOntologyNewsExtractorUserRunner/app/views/layouts/application.html.erb
+++ b/ZeOntologyNewsExtractorUserRunner/app/views/layouts/application.html.erb
@@ -28,8 +28,7 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="/">Home</a></li>
-              <li><a href="http://www.zone-project.org">WebSite</a></li>
-              <li><a href="http://www.zone-project.org/?page_id=13">Contact</a></li>
+              <li><a href="/sources">Sources List</a></li>
             </ul>
           </div>
         </div>
