[#41011135]  change client style

--- a/ZeOntologyNewsExtractorUserRunner/app/views/layouts/application.html.erb
+++ b/ZeOntologyNewsExtractorUserRunner/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <%= stylesheet_link_tag("/bootstrap/css/bootstrap.min.css") %>
   <%= stylesheet_link_tag("/bootstrap/css/bootstrap-responsive.css") %>
   <%= stylesheet_link_tag("/bootstrap/css/zone-wp.css") %>
-  <%= stylesheet_link_tag("/bootstrap/css/cerulean.css") %>
+  <%= stylesheet_link_tag("/bootstrap/css/slate.css") %>
 </head>
 <body>
 
