[#41523243] add support for videos in client

--- a/ZeOntologyNewsExtractorUserRunner/app/views/layouts/application.html.erb
+++ b/ZeOntologyNewsExtractorUserRunner/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <%= stylesheet_link_tag("/bootstrap/css/bootstrap-responsive.css") %>
   <%= stylesheet_link_tag("/bootstrap/css/zone-wp.css") %>
   <%= stylesheet_link_tag("/bootstrap/css/slate.css") %>
+<script type="text/javascript" src="/jwplayer.js" ></script>
 </head>
 <body>
 
