--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -2,13 +2,45 @@
 <html>
 <head>
   <title>ZONEWatcher</title>
+  <%= #include_gon 
+  %>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag params[:controller] %>
   <%= csrf_meta_tags %>
+  <%= javascript_include_tag("/bootstrap/js/bootstrap.min.js")%>
+  <%= stylesheet_link_tag("/bootstrap/css/bootstrap.min.css") %>
+  <%= stylesheet_link_tag("/bootstrap/css/bootstrap-responsive.css") %>
+  <%= stylesheet_link_tag("/bootstrap/css/zone-wp.css") %>
+  <%= stylesheet_link_tag("/bootstrap/css/slate.css") %>
+<script type="text/javascript" src="/jwplayer/jwplayer.js" ></script>
 </head>
 <body>
 
+
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="/">Zone - DEMO</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="/">Home</a></li>
+              <li><a href="/sources">Sources List</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="container">
 <%= yield %>
+</div>
 
 </body>
 </html>
